Update 1415015139-Muhammad Afrizal Rahlevi.html

--- a/Kelas C2/RESPONSI/PERTEMUAN 3/1415015139-Muhammad Afrizal Rahlevi.html
+++ b/Kelas C2/RESPONSI/PERTEMUAN 3/1415015139-Muhammad Afrizal Rahlevi.html
@@ -1,4 +1,3 @@
-1.
 <!DOCTYPE html>
 <html>
 <head>
@@ -16,9 +15,10 @@
 	</body>
 </html>
 
-Analisis : Inputan berupa huruf yang terlihat, inputan karakter karena pakai type password
+<!-- Analisis : Inputan berupa huruf atau karakter yang terlihat, inputan karakter karena pakai type password -->
 
-2.
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -39,9 +39,10 @@ Analisis : Inputan berupa huruf yang terlihat, inputan karakter karena pakai typ
 	</body>
 </html>
 
-Analisis :  cheackbox untuk inputan lebih dari satu dan boleh kosong, radio inputan hanya boleh 1 inputan
+<!-- Analisis :  cheackbox untuk inputan lebih dari satu dan boleh kosong, radio inputan hanya boleh 1 inputan -->
 
-3.
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -53,13 +54,13 @@ Analisis :  cheackbox untuk inputan lebih dari satu dan boleh kosong, radio inpu
 				<option value="volvo">Volvo
 				<option value="peugeot">Peugeot
 				<option value="fiat" selected>Fiat
-				<option value="jaguar">
+				<option value="jaguar">Jaguar
 			</select>
 		</form>
 	</body>
 </html>
 
-Analisis : Jaguar isi dari tag select, memiliki isi dan maksimal pilihan 1
+<!-- Analisis : Jaguar isi, isi dari tag select, memiliki isi dan maksimal pilihan 1 -->
 
 4.
 <!DOCTYPE html>
@@ -86,11 +87,11 @@ Analisis : Jaguar isi dari tag select, memiliki isi dan maksimal pilihan 1
 </body>
 </html>
 
-Analisis : manampilkan tombol, fieldset untuk menampung isi dalam kotak
+<!-- Analisis : manampilkan tombol, fieldset untuk menampung isi dalam kotak -->
 
 
 
-5.
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -112,9 +113,10 @@ Analisis : manampilkan tombol, fieldset untuk menampung isi dalam kotak
 </body>
 </html>
 
-Analisis : yang akan melakukan submit dengan type submit dan value adalah keterangan di tombol itu
+<!-- Analisis : yang akan melakukan submit dengan type submit dan value adalah keterangan di tombol itu -->
 
-6.
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -139,10 +141,10 @@ Analisis : yang akan melakukan submit dengan type submit dan value adalah ketera
 </body>
 </html>
 
-Analisis : size untuk menentukan ukuran dari textbox, value adalah kata-kata yang akan tertampil pertama kali, type reset akan menghapus isi yang telah kita isikan
+<!-- Analisis : size untuk menentukan ukuran dari textbox, value adalah kata-kata yang akan tertampil pertama kali, type reset akan menghapus isi yang telah kita isikan -->
 
 
-7.
+
 <!DOCTYPE html>
  <html>
  <head>
@@ -167,10 +169,10 @@ Analisis : size untuk menentukan ukuran dari textbox, value adalah kata-kata yan
  </body>
  </html>
 
-Analisis : src adalah lokasi gambar, width lebar gambar, dan height untuk tinggi gambar
+<!-- Analisis : src adalah lokasi gambar, width lebar gambar, dan height untuk tinggi gambar -->
 
 
-8.
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -209,10 +211,10 @@ Analisis : src adalah lokasi gambar, width lebar gambar, dan height untuk tinggi
 </body>
 </html>
 
-Analisis : Bottom adalah default, bottom akan membuat gambar sejajar bawah tulisan, middle sejajar tengah tulisan, dan top sejajar atas tulisan.
+<!-- Analisis : Bottom adalah default, bottom akan membuat gambar sejajar bawah tulisan, middle sejajar tengah tulisan, dan top sejajar atas tulisan. -->
 
 
-9.
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -224,7 +226,8 @@ Analisis : Bottom adalah default, bottom akan membuat gambar sejajar bawah tulis
 </html>
 Alt untuk keterangan jika foto belum ada
 
-10.
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -238,10 +241,9 @@ Alt untuk keterangan jika foto belum ada
 </body>
 </html>
 
-Analisis : Bgcolor untuk latar belakang text (warna)
+<!-- Analisis : Bgcolor untuk latar belakang text (warna) -->
 
 
-11.
 <!DOCTYPE html>
 <html>
 <head>
@@ -253,4 +255,4 @@ Analisis : Bgcolor untuk latar belakang text (warna)
 </body>
 </html>
 
-Analisis : Susah dibaca, karena pakai warna text yang diberikan di body tidak sesuai
+<!-- Analisis : Susah dibaca, karena pakai warna text yang diberikan di body tidak sesuai -->
