Update 1415015139-Muhammad Afrizal Rahlevi.html

--- a/Kelas C2/RESPONSI/PERTEMUAN 3/1415015139-Muhammad Afrizal Rahlevi.html
+++ b/Kelas C2/RESPONSI/PERTEMUAN 3/1415015139-Muhammad Afrizal Rahlevi.html
@@ -224,7 +224,8 @@
 <img src="OP.jpg" alt="One Piece" width="32" height="32">
 </body>
 </html>
-Alt untuk keterangan jika foto belum ada
+
+<!-- Analisis :  Atribut Alt untuk deskripsi atau keterangan jika foto belum ada -->
 
 
 
