Update 1415015018 Muh Luthfan Y.html

--- a/Kelas A1/RESPONSI/PERTEMUAN 3/1415015018 Muh Luthfan Y.html
+++ b/Kelas A1/RESPONSI/PERTEMUAN 3/1415015018 Muh Luthfan Y.html
@@ -19,7 +19,9 @@ Perhatikan bahwa ketika Anda mengetikkan karakter-karakter dalam suatu field pas
 </body> 
 </html>
 
-<!Analisa . . . .>
+<!Analisa : 
+Jadi script diatas menjelaskan tentang pembuatan sebuah form dimana akan memunculkan nama, nama belakang dan password.
+tetapi berbeda dengan inputan nama dan nama belakang ketika menginputkan password yang terlihat hanya bullet bukan karakter.>
 
 <html> 
 <body> 
@@ -43,7 +45,10 @@ Ketika seorang pengguna memberikan klik mouse pada sebuah tombol radio, tombol t
 </body> 
 </html>
 
-<!Analisa...>
+<!Analisa : Disini akan memunculkan sebuah checkbox untuk sebuah pertanyaan
+"Saya memiliki sebuah sepeda:" dan "Saya memiliki sebuah mobil:"
+dan juga memunculkan tombol radio fungsinya sama seperti checkbox tetapi tombol radio
+hanya dapat memilih 1 pilihan saja.>
 
 <html> 
 <body> 
@@ -58,7 +63,9 @@ Ketika seorang pengguna memberikan klik mouse pada sebuah tombol radio, tombol t
 </body> 
 </html>
 
-<!analisa...>
+<!Analisa : Jadi script ini akan menampilkan sebuah list menu dengan model drop down dan menampilkan list mobil
+seperti Volvo, Peugeot, Fiat dan Jaguar.
+Dan juga kita hanya bisa memilih satu dari pilihan dalam list tersebut.>
 
 <html> 
 <body> 
@@ -79,7 +86,8 @@ Bila tidak terlihat adanya border di sekeliling form input, browser Anda sudah t
 </body> 
 </html>
 
-<!analisa...>
+<!Analisa: Disini kita dapat menginputkan tinggi dan berat badan kedalam sebuah form.
+Terdapat pula sebuah tombol dibawahnya yang nantinya dapat berfungsi sebagai tombol "accept".>
 
 <html> 
 <body> 
@@ -97,7 +105,9 @@ Bila Anda meng-klik tombol "Submit", Anda akan mengirim input yang dimasukkan le
 </body> 
 </html>
 
-<!analisa...>
+<!Analisa : Dalam script ini kita bisa menginputkan nama depan dan belakang kita ke dalam sebuah form
+yang dilanjutkan dengan tombol submit dibawahnya.
+Tombol submit disini juga mendirect/mengarahkan kita ke pemroses yang bernama form_action.asp disitus w3c.>
 
 <html> 
 <body> 
@@ -118,7 +128,10 @@ Komentar:<br>
 </body> 
 </html>
 
-<!analisa...>
+<!Analisa : Disini kita dapat menginput nama, email dan komentar yang kemudian kita bisa mengirimnya
+ke W3C dengan memilih tombol send dibawahnya,
+serta kita juga dapat me-reset atau mengosongkan kembali apa yang telah kita tulis sebelumnya
+dengan menekan tombol reset dibawah form.>
 
 <html> 
 <body background="background.jpg"> 
@@ -140,7 +153,10 @@ Mengambil gambar dari situs lain:
 </body> 
 </html>
 
-<!analisa...>
+<!Analisa : Disini kita dapat menambahkan gambar pada latar belakang dan depan,
+kita dapat memasukkan gambar dari yang sudah tersedia,
+dari folder yang terdapat pada komputer kita,
+serta dapat menambahkan gambar dari situs lain dengan memasukkan linknya kedalam script diatas.>
 
 <html> 
 <body> 
@@ -175,7 +191,9 @@ Sebuah gambar di belakang teks
 </body> 
 </html>
 
-<!analisa....>
+<!Analisa : Disini kita dapat mengatur posisi gambar dengan menyisipkan sebuah gambar diantara sebuah teks,
+dibagian depan teks dan juga dibagian belakang teks.
+Kita dapat memasukkan gambar bergerak dengan format .gif dan gambar diam dengan format .jpeg .png dan lain lain.>
 
 <html> 
 <body> 
@@ -184,7 +202,8 @@ Sebuah gambar di belakang teks
 </body> 
 </html> 
 
-<!analisa...>
+<!Analisa : Disini kita dapat menampilkan teks alternatif pada sebuah gambar, 
+dimana tulisan pada gambar tersebut bisa ditampilkan ketika pointer diarahkan pada gambar tersebut.>
 
 <html> 
 <body bgcolor="#d0d0d0"> 
@@ -194,7 +213,7 @@ Paragraf ini terlihat enak dibaca karena menggunakan kombinasi warna latar belak
 </body> 
 </html> 
 
-<!analisa...>
+<!Analisa : Disini kita dapat memasukkan warna latar belakang dengan memberi perintah discript yang terletak pada <body>.>
 
 <html> 
 <body bgcolor="#ffffff" text="yellow"> 
@@ -203,3 +222,8 @@ Paragraf ini terlihat tidak nyaman dibaca karena menggunakan kombinasi warna lat
 </p> 
 </body> 
 </html> 
+
+<!Analisa : Disini juga kita dapat mengubah warna teks jadi tidak hanya latar belakang saja,
+tetapi sangat penting untuk diingat perpaduan warna yang digunakan,
+seperti pada contoh ini teks warna kuning yang dipadukan dengan warna putih latar belakang.
+Akan susah dibaca oleh user yang membacanya.>
