--- a/Kelas A1/RESPONSI/PERTEMUAN 3/1415015186-Aji Sudjay.html
+++ b/Kelas A1/RESPONSI/PERTEMUAN 3/1415015186-Aji Sudjay.html
@@ -1,1 +1,222 @@
+<h1>latihan 1</h1>
+<html> 
+<head>
+	<title> Belajar PW </title>
+</head>
+<body>
+	<form>
+	Nama Depan :
+	<input type="text" name="namadepan">
+	<br>
+	Nama Belakang :
+	<input type="text" name="namabelakang">
+	<br>
+	Password:
+	<input type="password" name="password">
+	</form>
+	<p>
+	Perhatikan bahwa ketika Anda mengetikkan karakter-karakter dalam suatu field password, browser akan menampilkan asterisk atau bullet saja, bukan karakter yang diketikkan.
+	</p>
 
+</body>
+</html>
+<!program membuat field pengisian data dan input type="password" akan menampilkan bullet saka ketika mengetik disana>
+
+<h1>latihan 2</h1>
+<html>
+<head>
+	<title>Belajar PW<</title>
+</head>
+<body>
+	<form>
+	Saya memiliki sebuah sepeda:
+	<input type="checkbox" name="sepeda">
+	<br>
+	Saya memiliki sebuah mobil:
+	<input type="checkbox" name="Mobil" value="ON">
+	<br>
+	Jenis kelamin Anda?
+	<br>
+	Pria:
+	<input type="radio" name="Sex" value="pria">
+	<br>
+	Wanita:
+	<input type="radio" name="Sex" value="wanita" checked>
+	</form>
+	<p>
+	Ketika seorang pengguna memberikan klik mouse pada sebuah tombol radio, tombol tersebut terlihat diberi tanda cek, dan semua tombol lain yang berada dalam nama yang sama akan kehilangan tanda cek-nya
+	</p>
+
+</body>
+</html>
+<!input type checkbox bisa di centang semua dan ketika input type radio maka hanya salah satu saja dan tombol lain tanda cek-nya akan hilang>
+
+<h1>latihan 3</h1>
+<html>
+<head>
+	<title>Belajar PW</title>
+</head>
+<body>
+	<form>
+		<select name="mobil">
+			<option value="volvo">Volvo
+			<option value="peugeot">Peugeot
+			<option value="fiat" selected>Fiat
+			<option value="jaguar">Jaguar
+		</select>
+		</form>
+</body>
+</html>
+<!memberikan kotak drop down dan "Fiat" menjadi nilai yang terpilih diawal secara default>
+
+<h1>latihan 4</h1>
+<html>
+<head>
+	<title>Belajar PW</title>
+</head>
+<body>
+	<fieldset>
+		<legend>
+			Informasi kesehatan:
+		</legend>
+		<form>
+			Tinggi <input type="text" size="3">
+			Berat <input type="text" size="3">
+			<br>
+			<input type="button" value="Ada tombol disini">
+		</form>
+	</fieldset>
+	<p>
+		Bila tidak terlihat adanya border disekeliling form input, browser Anda sudah terlalu lama.
+	</p>
+
+</body>
+</html>
+<!membuat fieldset Tinggi dan berat dan juga membuat tombol "ada tombol disini">
+
+<h1>latihan 5</h1>
+<html>
+<head>
+	<title>Belajar PW</title>
+</head>
+<body>
+	<form name="input" action="http://www.w3c.org/form_action.asp" method="get">
+		Masukkan nama depan anda:
+		<input type="text" name="namadepan" value="Mickey">
+		<br>Masukkan nama belakang anda:
+		<input type="text" name="namabelakang" value="Mouse">
+		<br>
+		<input type="submit" value="Submit">
+	</form>
+	<p>
+		Bila anda meng-klik tombol "Submit",anda akan mengirim input yang dimasukkan lewat form di atas ke pemroses yang bernama form_action.asp disitus w3c.
+	</p>
+	</body>
+	</html>
+	<!membuat fieldset yang mempunyai nilai default yaitu mickey dan mouse, lalu membuat tombol submit untuk mengirimkan inputan ke tujuan(form_action.asp disitus w3c).>
+
+<h1>latihan 6</h1>
+<html>
+<head>
+	<title>Belajar PW</title>
+</head>
+<body>
+	<form action="@" method="post" enctype="text/plain">
+		<h3>Form ini mengirim sebuah e-mail ke W3C.</h3>
+		Nama<br>
+		<input type="text" name="nama" value="Nama Anda" size="20">
+		<br>
+		Mail:<br>
+		<input type="text" name="mail" value="Mail Anda" size="20">
+		<br>
+		Komentar:<br>
+		<input type="text" name="komentar" value="Komentar Anda" size="40">
+		<br><br>
+		<input type="submit" value="Send">
+		<input type="reset" value="Reset">
+	</form>
+</body>
+</html>
+<!fieldset nama,email,dan komentar dengan beserta nilai default lalu membuat tombol submit untuk mengirim email ke W3C dan tombol reset untuk mereset field>
+
+<h1>latihan 7</h1>
+<html>
+<head>
+	<title>Belajar PW</title>
+</head>
+<body background="background.jpg">
+	<h3>Lihatlah, ada gambar latar belakang!</h3>
+	<p> Baik file gambar dengan format gif maupun jpg dapat digunakan sebagai latar belakang HTML.</p>
+	<p>Bila gambar yang digunakan lebih kecil dari halaman situs,gambar akan ditampilkan berulang-ulang.</p>
+	<p>
+	Sebuah gambar dari folder lokal:
+	<img scr="gambar1.gif" width="144" height="50">
+	</p>
+	<p>
+	Gambar dari folder lain:
+	<img src="desktop/images/gambar2.gif" width="33" heigh="32">
+	</p>
+	<p>
+	Mengambil gambar dari situs lain:
+	<img  src="www.yahoo.com/images/ie.gif" width="73" height="68">
+	</p>
+</body>
+</html>
+<!menampilkan file jpg dan gif untuk background maupun sisipan dari folder lokal,folder lain, maupun dari situs lain>
+
+<h1>latihan 8</h1>
+<html>
+<head>
+	<title>Belajar PW</title>
+</head>
+<body>
+	<p>
+	Sebuah gambar
+	<img src="gambar.jpg" align="bottom" width="100" height="50">
+	diantara teks
+	</p>
+	<p>
+	Sebuah gambar
+	<img src="gambar.jpg" align="middle" width="100" height="50">
+	di antara teks
+	</p>
+	<p>
+	Sebuah gambar
+	<img src="gambar.jpg" align="top" width="100" height="50">
+	di antara teks
+	</p>
+	<p> Perhatikan bahwa default pengaturan adalah bottom (diletakkan dibagian bawah)</p>
+	<p>
+	Sebuah gambar
+	<img src="gambar.jpg" width="100" height="50">
+	di antara teks
+	</p>
+	<p>
+	<img src="gambar.jpg" width="100" height="50">
+	Sebuah gambar di depan teks
+	</p>
+	<p>
+	Sebuah gambar dibelakang teks 
+	<img src="gambar.jpg" width="100" height="50">
+	</p>
+
+</body>
+</html>
+<!mengatur posisi gambar bottom untuk dibawah,top diatas,middle ditengah dan sebagainya>
+
+<h1>latihan 9</h1>
+<html>
+<head>
+	<title>Belajar PW</title>
+</head>
+<body>
+	<img src="../images/contoh gif" alt="keterangan" width="32" height="32">
+	<p>
+	Browser text-only hanya akan menampilkan teks dalam atribut "alt", yaitu keterangan".
+	Perhatikan bahwa bilamana Anda membawa pointer mouse di atas gambar tersebut maka teks alternatif akan ditampilkan.
+	</p>
+</body>
+</html>
+<!membuat teks alternatif"keterangan" ketika pointer mouse berada diatas gambar>
+
+<h1>latihan 10 dan 11 adalah contoh warna background yg sesuai dan tidak </h1>
